Bug 115671 - OpenGL: MSO OOXML shapes incorrectly rendered
Summary: OpenGL: MSO OOXML shapes incorrectly rendered
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords: bibisectRequest, regression
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2018-02-13 05:52 UTC by Luke
Modified: 2018-07-04 12:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example Callout (14.28 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-02-13 05:52 UTC, Luke
Details
comparison LibreOffice 6.1 and MSO 2010 (20.99 KB, image/png)
2018-02-13 12:11 UTC, Xisco Faulí
Details
Minimal reproducer. (17.62 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-07-03 13:00 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2018-02-13 05:52:20 UTC
Created attachment 139854 [details]
Example Callout

Steps to reproduce:

1. In MSO insert Rounded Rectangular Callout
2. Save and Open in LO

The imported shape in LO is only partially drawn, missing a segment on the side.
Comment 1 Xisco Faulí 2018-02-13 12:11:00 UTC
Created attachment 139863 [details]
comparison LibreOffice 6.1 and MSO 2010
Comment 2 Xisco Faulí 2018-02-13 12:11:27 UTC
I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: e6e125946358865990ea999c8a4845ec84eb7088
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

Which version of LibreOffice are you using ?
Comment 3 Luke 2018-02-13 18:38:18 UTC Comment hidden (obsolete)
Comment 4 Luke 2018-02-15 04:34:20 UTC
In order to reproduce this bug, you have to enable OpenGL.

Tools -> Options -> View -> "Use OpenGL for all rendering"

Must be checked. I could reproduce this on both my Nvidia GTX 650 and my Intel HD 5500. 

Version: 6.1.0.0.alpha0+ (x64)
Build ID: 8b73bafbc18acb4dd8911d2f2de8158d98eb6144
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
Locale: en-US (en_US); Calc: CL
Comment 5 Aron Budea 2018-02-17 22:14:46 UTC
Reproduced using LO 5.2.0.4 / Windows 7, with OpenGL enabled.
The shape is complete in 5.1.0.3.
=> regression

Not sure if it can be bibisected, I tend to have problems with OpenGL in dev builds before 5.2.

There's a positioning bug when trying to move the handle of the shape, for that I opened bug 115813.
Comment 6 Miklos Vajna 2018-06-29 15:23:03 UTC
I can reproduce the problem. It only happens with GL and only on Windows. I'll try to fix this, let's see.
Comment 7 Miklos Vajna 2018-07-03 13:00:16 UTC
Created attachment 143290 [details]
Minimal reproducer.

A stripped down version of the bugdoc, containing just a triangle (but only 2 out of the 3 edges are rendered).
Comment 8 Commit Notification 2018-07-03 17:42:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d4b49841090c70cc31000fb30de9b5ddc07b0c42

tdf#115671 vcl opengl: fix drawing of polylines with duplicate points

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2018-07-04 12:27:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ab89b8af4784d9edc2dbab40f14fb47d43bfbb5f&h=libreoffice-6-1

tdf#115671 vcl opengl: fix drawing of polylines with duplicate points

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.