tdf#115671 vcl opengl: fix drawing of polylines with duplicate points

The bugdoc had a custom shape, the interesting part of it was a triangle
with miter line join, where the last segment was missing. In that case
RenderList::addDrawPolyLine() mishandled the polyline, as it does not
expect duplicate points in it.

(cherry picked from commit d4b49841090c70cc31000fb30de9b5ddc07b0c42)

Change-Id: I06d5c2d191bb6269a87da1f006f27a94205f5145